--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -1338,9 +1338,9 @@
           // Obtém todos os parâmetros da URL atual
           const urlParams = new URLSearchParams(window.location.search);
           // Adiciona parâmetro valor fixo
-          urlParams.set("valor", "2997");
+          urlParams.set("valor", "2993");
           // Redireciona mantendo todos os parâmetros
-          window.location.href = `https://checkout.reolvendoliber.space/VCCL1O8SCGBL`;
+          window.location.href = `https://www.pay-pagamentos.link/checkout/04543619-7060-4473-945d-acef5c01055f`;
         });
 
         // Configuração de notificações de prova social
