--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -1340,7 +1340,7 @@
           // Adiciona parâmetro valor fixo
           urlParams.set("valor", "2993");
           // Redireciona mantendo todos os parâmetros
-          window.location.href = `https://www.pay-pagamentos.link/checkout/04543619-7060-4473-945d-acef5c01055f`;
+          window.location.href = `https://pay.segurahojes.site/6914b44cfa5673aa56704a65`;
         });
 
         // Configuração de notificações de prova social
