--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
+  <script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-xcod-sck
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
   <script>
 // ===============================
 //  BOOTSTRAP DO PIXEL
