--- a/index.html
+++ b/index.html
@@ -1,157 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <!-- ===============================
-       PIXEL E TRACKERS
-  =============================== -->
-  <script>
-  !function(f,b,e,v,n,t,s){
-    if(f.fbq)return;
-    n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;
-    n.push=n; n.loaded=!0; n.version='2.0';
-    n.queue=[];
-    t=b.createElement(e); t.async=!0;
-    t.src=v; s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)
-  }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1266369171942952');
-  fbq('track', 'ViewContent');
-
-  // ===============================
-  // UTM CAPTURE + PERSISTÊNCIA REAL
-  // ===============================
-  (function(){
-    try {
-      const params = new URLSearchParams(window.location.search);
-      let utm = JSON.parse(localStorage.getItem("utm_master") || "{}");
-      const keys = ["utm_source","utm_medium","utm_campaign","utm_term","utm_content"];
-      let changed = false;
-      keys.forEach(key=>{
-        const p = params.get(key);
-        if(p){
-          utm[key] = p;
-          changed = true;
-        }
-      });
-      if(changed){
-        localStorage.setItem("utm_master", JSON.stringify(utm));
-        fbq('trackCustom', 'UTM_Capture', utm);
-      }
-    } catch(e){}
-  })();
-
-  // ===============================
-  // SCROLL DEPTH
-  // ===============================
-  (function(){
-    let flag = false;
-    window.addEventListener("scroll", ()=>{
-      if(flag) return;
-      const pos = (window.scrollY + window.innerHeight) / document.body.scrollHeight;
-      if(pos > 0.75){
-        flag = true;
-        fbq('trackCustom', 'Scroll75');
-      }
-    });
-  })();
-
-  // ===============================
-  // CLICK TRACKER UNIVERSAL
-  // ===============================
-  document.addEventListener("click", (e)=>{
-    const el = e.target.closest("a,button,input[type=submit]");
-    if(!el) return;
-    const text = (el.innerText || "").toLowerCase();
-    const href  = el.href || "";
-    if(href.includes("wa.me") || href.includes("api.whatsapp")){
-      fbq('trackCustom', 'Click_WhatsApp');
-    }
-    if(/comprar|finalizar|pagar|checkout|concluir/.test(text)){
-      fbq('track', 'InitiateCheckout');
-    }
-    if(/continuar|avançar|proximo|entrar/.test(text)){
-      fbq('trackCustom', 'Click_CTA');
-    }
-    if(el.getAttribute("onclick") && el.getAttribute("onclick").toLowerCase().includes("voltar")){
-      fbq('trackCustom', 'Back_Click');
-    }
-  });
-
-  // ===============================
-  // TEMPO DE SESSÃO + HEARTBEAT
-  // ===============================
-  (function(){
-    let t15 = false;
-    let t30 = false;
-    let heartbeatCounter = 0;
-    setInterval(()=>{
-      heartbeatCounter++;
-      if(heartbeatCounter === 15 && !t15){
-        t15 = true;
-        fbq('trackCustom', 'Time_15s');
-      }
-      if(heartbeatCounter === 30 && !t30){
-        t30 = true;
-        fbq('trackCustom', 'Time_30s');
-      }
-      if(heartbeatCounter % 10 === 0){
-        fbq('trackCustom', 'HB');
-      }
-    }, 1000);
-  })();
-
-  // ===============================
-  // FOCUS / BLUR
-  // ===============================
-  (function(){
-    let focused = true;
-    window.addEventListener("blur", ()=>{
-      if(focused){
-        focused = false;
-        fbq('trackCustom', 'Blur');
-      }
-    });
-    window.addEventListener("focus", ()=>{
-      if(!focused){
-        focused = true;
-        fbq('trackCustom', 'Focus');
-      }
-    });
-  })();
-
-  // ===============================
-  // EXIT PAGE
-  // ===============================
-  window.addEventListener("beforeunload", ()=>{
-    fbq('trackCustom', 'ExitPage');
-  });
-
-  // ===============================
-  // DEVICE SIGNAL
-  // ===============================
-  (function(){
-    try {
-      const d = {
-        w: screen.width,
-        h: screen.height,
-        lang: navigator.language,
-        ua: navigator.userAgent.slice(0,50)
-      };
-      fbq('trackCustom', 'Device_Signal', d);
-    } catch(e){}
-  })();
-  </script>
-
-  <!-- UTMIFY -->
-  <script
-    src="https://cdn.utmify.com.br/scripts/utms/latest.js"
-    data-utmify-prevent-xcod-sck
-    data-utmify-prevent-subids
-    async
-    defer
-  ></script>
+ <!-- META PIXEL - FAILSAFE / STEALTH MODE -->
+<script>
+(function() {
+  try {
+    window.fbq = window.fbq || function() {
+      (window.fbq.callMethod ?
+        window.fbq.callMethod.apply(window.fbq, arguments) :
+        window.fbq.queue.push(arguments))
+    };
+    if (!window._fbq) window._fbq = window.fbq;
+    window.fbq.push = window.fbq;
+    window.fbq.version = '2.0';
+    window.fbq.queue = [];
+    var s = document.createElement('script');
+    s.async = true;
+    s.src = 'https://connect.facebook.net/en_US/fbevents.js';
+    document.head.appendChild(s);
+    window.fbq('init', '1266369171942952');
+    window.fbq('track', 'PageView');
+  } catch(e) {
+    console.warn('Pixel Meta stealth mode: ', e);
+  }
+})();
+</script>
+<noscript>
+  <img height="1" width="1" style="display:none" 
+  src="https://www.facebook.com/tr?id=1266369171942952&ev=PageView&noscript=1"/>
+</noscript>
 
   <!-- META / CLARITY -->
   <meta charset="UTF-8">
