--- a/index.html
+++ b/index.html
@@ -1,66 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
- <!-- META PIXEL - FAILSAFE / STEALTH MODE -->
-<script>
-(function() {
-  try {
-    window.fbq = window.fbq || function() {
-      (window.fbq.callMethod ?
-        window.fbq.callMethod.apply(window.fbq, arguments) :
-        window.fbq.queue.push(arguments))
-    };
-    if (!window._fbq) window._fbq = window.fbq;
-    window.fbq.push = window.fbq;
-    window.fbq.version = '2.0';
-    window.fbq.queue = [];
-    var s = document.createElement('script');
-    s.async = true;
-    s.src = 'https://connect.facebook.net/en_US/fbevents.js';
-    document.head.appendChild(s);
-    window.fbq('init', '1266369171942952');
-    window.fbq('track', 'PageView');
-  } catch(e) {
-    console.warn('Pixel Meta stealth mode: ', e);
-  }
-})();
-</script>
-<noscript>
-  <img height="1" width="1" style="display:none" 
-  src="https://www.facebook.com/tr?id=1266369171942952&ev=PageView&noscript=1"/>
-</noscript>
-
-  <!-- META / CLARITY -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript">
-    (function (c, l, a, r, i, t, y) {
-      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments); };
-      t = l.createElement(r); t.async = 1;
-      t.src = "https://www.clarity.ms/tag/" + i;
-      y = l.getElementsByTagName(r)[0];
-      y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "sgok0woyb3");
-  </script>
-
-  <!-- TAILWIND -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            shopee: {
-              light: "#cab600",
-              DEFAULT: "#f5d317",
-              dark: "#ffd900",
-            },
-          },
-        },
-      },
-    };
-  </script>
-  <!-- 🔥 UTMIFY TRACKING - versão otimizada -->
+ <!-- 🔥 UTMIFY TRACKING - versão otimizada -->
 <script>
   // ID do seu pixel UTMify
   window.pixelId = "690d7df482986500f1b44d88";
@@ -93,8 +34,36 @@
   async
   defer
 ></script>
+  <!-- META / CLARITY -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments); };
+      t = l.createElement(r); t.async = 1;
+      t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0];
+      y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "sgok0woyb3");
+  </script>
 
-
+  <!-- TAILWIND -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            shopee: {
+              light: "#cab600",
+              DEFAULT: "#f5d317",
+              dark: "#ffd900",
+            },
+          },
+        },
+      },
+    };
+  </script>
   <!-- FONTES -->
   <link rel="stylesheet" href="css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -684,5 +653,22 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+ <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1266369171942952');
+    fbq('track', 'ViewContent');
+</script>
+
+<noscript>
+    <img height='1' width='1' style='display:none' 
+         src='https://www.facebook.com/tr?id=1266369171942952&ev=ViewContent&noscript=1'/>
+</noscript>
 </body>
 </html>
